# Pulsar-Reflection

./: Cargo.toml  README.md
crates/pulsar_reflection/: Cargo.toml
crates/pulsar_reflection/src/: dynamic_types.rs  json_codec.rs  lib.rs  registry.rs  runtime_registry.rs  runtime_types.rs  type_renderer.rs  type_traits.rs
crates/pulsar_reflection/src/prims/: mod.rs
crates/pulsar_reflection/src/prims/core/: bool.rs  color.rs  enum_dropdown.rs  f32.rs  f64.rs  i32.rs  i64.rs  mod.rs  u64.rs  vec3.rs
crates/pulsar_reflection/src/prims/glam/: mat4.rs  mod.rs
crates/pulsar_reflection/src/prims/helio/: mod.rs  movability.rs
crates/pulsar_reflection/src/prims/serde/: json_value.rs  mod.rs
crates/pulsar_reflection/src/prims/std/: mod.rs  string.rs  wrappers.rs
crates/pulsar_reflection_derive/: Cargo.toml
crates/pulsar_reflection_derive/src/: deprecation.rs  derive.rs  enum_impl.rs  field_info.rs  lib.rs  pulsar_type.rs  struct_impl.rs  util.rs
