[workspace]
members = [
    "crates/pulsar_reflection",
    "crates/pulsar_reflection_derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anomalyco/pulsar_reflection"
rust-version = "1.81"
authors = ["Tristan J. Poland"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
once_cell = "1.20"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
dashmap = "6.1.0"
glam = { version = "0.33", features = ["serde"] }
inventory = "0.3"
owo-colors = "4"
pulsar_reflection_derive = { path = "crates/pulsar_reflection_derive" }
