[package]
name = "pulsar_reflection"
version = "0.1.0"
edition = "2021"

[features]
default = ["prims-core", "prims-std", "prims-glam"]
prims-core = []
prims-std = ["prims-core"]
prims-serde = ["prims-std"]
prims-glam = ["prims-core", "dep:glam"]
prims-gpui = ["dep:gpui-ce", "dep:ui"]

[dependencies]
inventory = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
pulsar_reflection_derive = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
glam = { workspace = true, optional = true }
gpui-ce = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "98e8438c931e04eff640ecad4d2ca81a64a95bac", optional = true }
ui = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI-Component", rev = "49ba61231b490ab3a4edbb62728300e27440a70b", optional = true }
